--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
       "target": "es6",
       "moduleResolution": "node",
       "sourceMap": true,
+      "sourceRoot": "src",
       "outDir": "dist"
     },
     "lib": ["es2015"]
