--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Chess engine",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha -r ts-node/register test/**/*.test.ts"
   },
   "keywords": [
     "chess"
@@ -12,6 +12,15 @@
   "author": "Rod Johnson",
   "license": "ISC",
   "devDependencies": {
+    "@types/chai": "^4.2.14",
+    "@types/mocha": "^8.2.0",
+    "chai": "^4.2.0",
+    "mocha": "^8.2.1",
+    "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
+  },
+  "dependencies": {
+    "@types/lodash": "^4.14.167",
+    "lodash": "^4.17.20"
   }
 }
